--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <div class="container">
       
-      <h1 class="mt-5 mb-5"><img width="200" src="img/bitcoin-accepted.jpg" />Bitcoin for Local Businesses</h1>
+      <img class="float-end" width="200" src="img/bitcoin-accepted.jpg" />
+      <h1 class="lg mt-5 mb-5 display-3">Bitcoin for Local Businesses</h1>
       
       <div class="row">
         <div class="col">
