--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       
       <img class="float-end" width="200" src="img/bitcoin-accepted.jpg" />
-      <h1 class="lg mt-5 mb-5 display-3">Bitcoin for Local Businesses</h1>
+      <h1 class="lg mt-5 mb-5 display-3">Bitcoin for NZ Businesses</h1>
       
       <div class="row">
         <div class="col">
@@ -37,7 +37,7 @@
         <div class="col">
           <h2>What do I need to do?</h2>
 
-          <p>To explore and choose the best option for your business, get in touch with NZ based Bridge2Bitcoin.com.  We have someone local to you who can provide advice and support.  Your business will also benefit from NZ wide and global publicity as one that accepts Bitcoin.  The Bitcoin community are active and loyal - this will generate additional revenue for your business. </p>
+          <p>To explore and choose the best option for your business, flick us an email at <a href="mailto:help@acceptbitcoin.nz">help@acceptbitcoin.nz</a>.  We have someone local to you who can provide advice and support.  Your business will also benefit from NZ wide and global publicity as one that accepts Bitcoin.  The Bitcoin community are active and loyal - this will generate additional revenue for your business. </p>
         </div>
       </div>
       <img class="img-fluid"  src="img/chart.png" />
