--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
           <h3>Do I have to pay tax on Bitcoin income?</h3>
           <p>Yes, If you recieve Bitcoin as business income then you will have to pay GST and income tax just the same as if you were receiving dollars <a href="https://www.ird.govt.nz/cryptoassets" target="_new">IRD Cryptoassets guidance</a></p>
 
-          <h3>Aren't there many Bitcoins?</ADD>
-          There are several off-shoot digital cash systems that use the word "Bitcoin" in their names. Bitcoin itself is the original peer-to-peer digital cash system invented in 2008, all other digital currencies were created much later. You can find out more at: https://bitcoin.org.
+          <h3>Aren't there many "cryptocurrencies"?</ADD>
+          <p>There are a lot several off-shoot digital cash systems, some use the word "Bitcoin" in their names.</p>
+          <p>Bitcoin itself is the original peer-to-peer digital cash system invented in 2008. It is the safest, most used, most decentralised, hard money we've ever had</p>
 
+          <h3>What about all these hacks and exchanges going bust?</h3>
+          <p>If youleave your Bitcoin on an exchange or leave it with any 3rd party your funds are at risk. If you self custody your own Bitcoin in your own Bitcoin wallet your funds are much safer.</p>
 
         </div>
       </div>
